cambiando diseño de preguntas

--- a/app/src/main/res/layout/activity_base_question.xml
+++ b/app/src/main/res/layout/activity_base_question.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--ketzalli
 contiene el recyclerview de las preguntas-->
+<!--
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -18,4 +19,44 @@ contiene el recyclerview de las preguntas-->
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>-->
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".Trivia.BaseQuestion">
+
+    <!--<me.relex.circleindicator.CircleIndicator
+        android:id="@+id/indicator"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_alignParentBottom="true"
+        android:background="#1E88E5"/>-->
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/view_pager2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true">
+
+    </androidx.viewpager2.widget.ViewPager2>
+
+    <Button
+        android:id="@+id/siguiente"
+        style="@style/Widget.MaterialComponents.Button.Icon"
+        android:layout_width="182dp"
+        android:layout_height="62dp"
+        android:layout_marginLeft="13dp"
+        android:layout_marginRight="13dp"
+        android:backgroundTint="#50BCCB"
+        android:text="Siguiente"
+        app:cornerRadius="10dp"
+        app:icon="@drawable/arrow_next2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+    <!--        android:layout_above="@+id/indicator"/>-->
+
+</RelativeLayout>
