--- a/app/src/main/res/layout/activity_progress.xml
+++ b/app/src/main/res/layout/activity_progress.xml
@@ -110,8 +110,8 @@
 
         <ImageView
             android:id="@+id/badge1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
             android:layout_weight="1"
             android:src="@drawable/locked_item"
             app:layout_constraintEnd_toEndOf="parent"
@@ -120,8 +120,8 @@
 
         <ImageView
             android:id="@+id/badge2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
             android:layout_weight="1"
             android:src="@drawable/locked_item"
             app:layout_constraintEnd_toStartOf="@+id/imageView6"
@@ -130,8 +130,8 @@
 
         <ImageView
             android:id="@+id/imageView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
             android:layout_weight="1"
             android:src="@drawable/locked_item"
             app:layout_constraintEnd_toEndOf="parent"
@@ -139,8 +139,8 @@
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
             android:layout_weight="1"
             android:src="@drawable/locked_item"
             tools:layout_editor_absoluteX="123dp"
