--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -6,25 +6,37 @@
     android:layout_height="match_parent"
     tools:context="org.bedu.okayapp.Inicio.LogIn"
     android:background="@color/lighter_gray">
+    <TextView
+        android:id="@+id/sign_up_txt_title"
+        android:layout_width="166dp"
+        android:layout_height="33dp"
+        android:layout_marginTop="32dp"
+        android:text="Iniciar sesión"
+        android:textColor="@color/purple"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/log_in_txt_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="116dp"
+        android:layout_marginTop="44dp"
         android:text="@string/log_in_email"
         android:textColor="@color/grey_letters"
         android:textSize="17dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.187"
+        app:layout_constraintHorizontal_bias="0.166"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/sign_up_txt_title" />
 
     <EditText
         android:id="@+id/log_in_editText_email"
         android:layout_width="340dp"
         android:layout_height="48dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/roundstyle"
         android:backgroundTint="@color/white"
         android:ems="10"
@@ -42,10 +54,12 @@
         android:id="@+id/log_in_txt_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="56dp"
         android:text="@string/login_password"
         android:textColor="@color/grey_letters"
         android:textSize="17dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/log_in_txt_email"
         app:layout_constraintTop_toBottomOf="@+id/log_in_editText_email" />
 
@@ -62,7 +76,7 @@
         android:paddingLeft="15dp"
         android:textColor="@color/grey_placeholders"
         android:textSize="15dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/log_in_editText_email"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/log_in_editText_email"
         app:layout_constraintTop_toBottomOf="@+id/log_in_txt_password" />
@@ -76,8 +90,9 @@
         android:textColor="@color/yolo_blue"
         android:textSize="11dp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:onClick="forgotPassword"
+        app:layout_constraintEnd_toEndOf="@+id/log_in_editText_password"
+        app:layout_constraintStart_toStartOf="@+id/log_in_editText_password"
         app:layout_constraintTop_toBottomOf="@+id/log_in_editText_password" />
 
     <CheckBox
@@ -88,26 +103,26 @@
         android:hint="@string/log_in_remember"
         android:textColor="@color/purple"
         android:textSize="12dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/log_in_txt_forgot"
         app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/log_in_txt_forgot"
         app:layout_constraintTop_toBottomOf="@+id/log_in_txt_forgot" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/log_in_btn_logIn"
         android:layout_width="316dp"
         android:layout_height="64dp"
-        android:layout_marginTop="92dp"
         android:backgroundTint="@color/blue_botton"
         android:hint="@string/log_in_button"
         android:text="@string/log_in_button"
+        android:onClick="loging"
         android:textColor="@color/white"
         android:textStyle="bold"
         app:cornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.631"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.964" />
+        app:layout_constraintEnd_toEndOf="@+id/log_in_chkBox_remember"
+        app:layout_constraintHorizontal_bias="0.513"
+        app:layout_constraintStart_toStartOf="@+id/log_in_chkBox_remember"
+        app:layout_constraintTop_toBottomOf="@+id/log_in_chkBox_remember"
+        app:layout_constraintVertical_bias="0.609" />
 </androidx.constraintlayout.widget.ConstraintLayout>
