--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -18,7 +18,6 @@
         android:src="@drawable/user_icon"/>
 
 
-
     <Button
         android:id="@+id/profile_button"
         android:layout_width="wrap_content"
@@ -26,9 +25,9 @@
         android:layout_marginTop="44dp"
         android:text="@string/profile_button"
         android:textSize="10sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/profile_imageView"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/profile_imageView"
         app:layout_constraintTop_toBottomOf="@+id/profile_imageView" />
 
     <TextView
@@ -37,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="72dp"
         android:text="Nombre del usuario"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/profile_button"
+        app:layout_constraintStart_toStartOf="@+id/profile_button"
         app:layout_constraintTop_toBottomOf="@+id/profile_button" />
 </androidx.constraintlayout.widget.ConstraintLayout>
