--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -10,22 +10,23 @@
 
     <TextView
         android:id="@+id/sign_up_txt_title"
-        android:layout_width="158dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_width="166dp"
+        android:layout_height="33dp"
         android:layout_marginTop="32dp"
         android:text="@string/sign_up_title"
         android:textColor="@color/purple"
         android:textSize="24sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 
     <EditText
         android:id="@+id/sign_up_editText_username"
         android:layout_width="340dp"
         android:layout_height="48dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/roundstyle"
         android:backgroundTint="@color/white"
         android:ems="10"
@@ -34,18 +35,16 @@
         android:paddingStart="20dp"
         android:textColor="@color/grey_placeholders"
         android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/sign_up_txt_title"
+        app:layout_constraintStart_toStartOf="@+id/sign_up_txt_title"
+        app:layout_constraintTop_toBottomOf="@+id/sign_up_txt_title"
         tools:ignore="RtlSymmetry" />
-
 
     <EditText
         android:id="@+id/sign_up_editText_email"
         android:layout_width="340dp"
         android:layout_height="48dp"
-        android:layout_marginTop="148dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/roundstyle"
         android:backgroundTint="@color/white"
         android:ems="10"
@@ -54,17 +53,17 @@
         android:paddingStart="20dp"
         android:textColor="@color/grey_placeholders"
         android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/sign_up_editText_username"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/sign_up_editText_username"
+        app:layout_constraintTop_toBottomOf="@+id/sign_up_editText_username"
         tools:ignore="RtlSymmetry" />
 
     <EditText
         android:id="@+id/sign_up_editText_password"
         android:layout_width="340dp"
         android:layout_height="48dp"
-        android:layout_marginTop="212dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/roundstyle"
         android:backgroundTint="@color/white"
         android:ems="10"
@@ -73,17 +72,17 @@
         android:paddingStart="20dp"
         android:textColor="@color/grey_placeholders"
         android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/sign_up_editText_email"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/sign_up_editText_email"
+        app:layout_constraintTop_toBottomOf="@+id/sign_up_editText_email"
         tools:ignore="RtlSymmetry" />
 
     <EditText
         android:id="@+id/sign_up_editText_passwordConfirmation"
         android:layout_width="340dp"
         android:layout_height="48dp"
-        android:layout_marginTop="276dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/roundstyle"
         android:backgroundTint="@color/white"
         android:ems="10"
@@ -92,10 +91,10 @@
         android:paddingStart="20dp"
         android:textColor="@color/grey_placeholders"
         android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/sign_up_editText_password"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/sign_up_editText_password"
+        app:layout_constraintTop_toBottomOf="@+id/sign_up_editText_password"
         tools:ignore="RtlSymmetry" />
 
     <com.google.android.material.button.MaterialButton
@@ -107,18 +106,18 @@
         android:textColor="@color/white"
         android:textStyle="bold"
         app:cornerRadius="8dp"
+        android:onClick="register"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.949" />
+        app:layout_constraintEnd_toEndOf="@+id/sign_up_RadioGroup"
+        app:layout_constraintStart_toStartOf="@+id/sign_up_RadioGroup"
+        app:layout_constraintTop_toBottomOf="@+id/sign_up_RadioGroup"
+        app:layout_constraintVertical_bias="0.56" />
 
     <EditText
         android:id="@+id/sign_up_editText_date"
         android:layout_width="340dp"
         android:layout_height="48dp"
-        android:layout_marginTop="340dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/roundstyle"
         android:backgroundTint="@color/white"
         android:clickable="false"
@@ -129,22 +128,20 @@
         android:paddingStart="20dp"
         android:textColor="@color/grey_placeholders"
         android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/sign_up_editText_passwordConfirmation"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/sign_up_editText_passwordConfirmation"
+        app:layout_constraintTop_toBottomOf="@+id/sign_up_editText_passwordConfirmation"
         tools:ignore="RtlSymmetry" />
 
     <RadioGroup
         android:id="@+id/sign_up_RadioGroup"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="400dp"
-        android:layout_marginEnd="35dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_width="346dp"
+        android:layout_height="84dp"
+        android:layout_marginEnd="3dp"
+        app:layout_constraintEnd_toEndOf="@+id/sign_up_editText_date"
+        app:layout_constraintStart_toStartOf="@+id/sign_up_editText_date"
+        app:layout_constraintTop_toBottomOf="@+id/sign_up_editText_date">
 
         <RadioButton
             android:id="@+id/signup_radioButton_student"
