--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,37 +6,42 @@
     android:layout_height="match_parent"
     tools:context=".Inicio.Profile">
 
+
     <ImageView
         android:id="@+id/profile_imageView"
         android:layout_width="228dp"
         android:layout_height="219dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="32dp"
+        android:src="@drawable/user_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/user_icon"/>
-
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/profile_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
-        android:text="@string/profile_button"
+        android:layout_width="56dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="8dp"
+        android:backgroundTint="@color/grey_background"
+        android:drawableLeft="@drawable/ic_baseline_photo_camera_24"
+        android:shadowRadius="50"
         android:textSize="10sp"
+        app:layout_constraintBottom_toBottomOf="@+id/profile_imageView"
         app:layout_constraintEnd_toEndOf="@+id/profile_imageView"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.813"
         app:layout_constraintStart_toStartOf="@+id/profile_imageView"
-        app:layout_constraintTop_toBottomOf="@+id/profile_imageView" />
+        app:layout_constraintTop_toTopOf="@+id/profile_imageView"
+        app:layout_constraintVertical_bias="0.863" />
 
     <TextView
         android:id="@+id/profile_txtView_userName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="64dp"
         android:text="Nombre del usuario"
-        app:layout_constraintEnd_toEndOf="@+id/profile_button"
-        app:layout_constraintStart_toStartOf="@+id/profile_button"
+        app:layout_constraintEnd_toEndOf="@+id/profile_imageView"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintStart_toStartOf="@+id/profile_imageView"
         app:layout_constraintTop_toBottomOf="@+id/profile_button" />
 </androidx.constraintlayout.widget.ConstraintLayout>
