--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -11,30 +11,32 @@
         android:id="@+id/menu_btn_logIn"
         android:layout_width="340dp"
         android:layout_height="60dp"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="56dp"
         android:backgroundTint="@color/blue_botton"
         android:text="@string/menu_login"
         android:textStyle="bold"
         app:cornerRadius="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.535"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logoMenu" />
+        app:layout_constraintTop_toBottomOf="@+id/logoMenu"
+        app:layout_constraintVertical_bias="0.0" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/menu_btn_signUp"
-        android:layout_width="330dp"
+        android:layout_width="340dp"
         android:layout_height="60dp"
         android:backgroundTint="@color/white"
         android:text="@string/menu_sign_up"
         android:textColor="@color/blue_botton"
         app:cornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/menu_btn_logIn"
-        app:layout_constraintHorizontal_bias="0.2"
-        app:layout_constraintStart_toStartOf="@+id/menu_btn_logIn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/menu_btn_logIn"
-        app:layout_constraintVertical_bias="0.323"
+        app:layout_constraintVertical_bias="0.088"
         app:strokeColor="@color/yolo_blue"
         app:strokeWidth="2dp" />
 
