--- a/app/src/main/res/layout/activity_categories.xml
+++ b/app/src/main/res/layout/activity_categories.xml
@@ -24,8 +24,8 @@
 
     <ListView
         android:id="@+id/listview"
-        android:layout_width="match_parent"
-        android:layout_height="450dp"
+        android:layout_width="411dp"
+        android:layout_height="580dp"
         android:layout_marginTop="10dp"
         app:layout_constraintBottom_toTopOf="@+id/CategoriesProgressBar"
         app:layout_constraintEnd_toEndOf="parent"
