--- a/app/src/main/res/layout/activity_estudio.xml
+++ b/app/src/main/res/layout/activity_estudio.xml
@@ -10,13 +10,40 @@
         android:id="@+id/reproducir"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:layout_marginBottom="32dp"
+        android:text="Acceder a video explicativo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView10"
+        app:layout_constraintVertical_bias="0.605"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="366dp"
+        android:layout_height="316dp"
+        android:layout_marginTop="48dp"
+        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ut lectus ut neque tempus hendrerit vel quis lectus. Fusce sed egestas mi, eu finibus libero. Fusce elit mi, finibus in leo et, congue volutpat orci. Cras non feugiat nibh. Duis tempus tincidunt mi, ac aliquet ex eleifend ac. Etiam auctor tellus quis justo lacinia, congue pulvinar erat lacinia. Sed fringilla sem nibh, a porta metus mollis id. In bibendum, dolor et fringilla convallis, lacus elit vestibulum velit, sit amet tristique orci lorem vel neque. In vitae eros non arcu maximus ultrices id vitae lacus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aliquam in nisl at sem hendrerit gravida ac sed urna. Maecenas condimentum enim et enim laoreet accumsan. "
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView11" />
+
+    <TextView
+        android:id="@+id/textView11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TITULO"
+        android:textAlignment="center"
+        android:textSize="34sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.499"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintVertical_bias="0.068" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
