--- a/app/src/main/res/layout/activity_forgot_pasword.xml
+++ b/app/src/main/res/layout/activity_forgot_pasword.xml
@@ -11,32 +11,34 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:text="Recuperar contraseña"
         android:textColor="@color/purple"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:text="Recuperar contraseña"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.104" />
 
     <TextView
         android:id="@+id/textView9"
-        android:layout_width="360dp"
-        android:layout_height="wrap_content"
+        android:layout_width="356dp"
+        android:layout_height="50dp"
         android:layout_marginTop="56dp"
         android:text="Ingresa correo registrado para enviar un correo con los pasos para cambiar tu contraseña."
         android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="@+id/textView7"
-        app:layout_constraintStart_toStartOf="@+id/textView7"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView7"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/log_in_editText_email"
-        android:layout_width="340dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="80dp"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
         android:background="@drawable/roundstyle"
         android:backgroundTint="@color/white"
         android:drawableLeft="@drawable/ic_baseline_email_24"
@@ -46,23 +48,28 @@
         android:paddingLeft="15dp"
         android:textColor="@color/grey_placeholders"
         android:textSize="15dp"
-        app:layout_constraintEnd_toEndOf="@+id/textView9"
-        app:layout_constraintHorizontal_bias="0.492"
-        app:layout_constraintStart_toStartOf="@+id/textView9"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView9"
+        app:layout_constraintVertical_bias="0.108" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/log_in_btn_logIn"
-        android:layout_width="316dp"
-        android:layout_height="64dp"
-        android:layout_marginBottom="140dp"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="184dp"
         android:backgroundTint="@color/blue_botton"
         android:text="Enviar correo"
         android:textColor="@color/white"
         android:textStyle="bold"
         app:cornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/log_in_editText_email"
-        app:layout_constraintStart_toStartOf="@+id/log_in_editText_email" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/log_in_editText_email"
+        app:layout_constraintVertical_bias="0.291" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
