--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -6,12 +6,14 @@
     android:layout_height="match_parent"
     tools:context="org.bedu.okayapp.Inicio.LogIn"
     android:background="@color/lighter_gray">
+
     <TextView
         android:id="@+id/sign_up_txt_title"
         android:layout_width="166dp"
         android:layout_height="33dp"
         android:layout_marginTop="32dp"
         android:text="Iniciar sesión"
+        android:textAlignment="center"
         android:textColor="@color/purple"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -64,6 +66,27 @@
         app:layout_constraintStart_toStartOf="@+id/log_in_txt_email"
         app:layout_constraintTop_toBottomOf="@+id/log_in_editText_email" />
 
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayout"
+        android:layout_width="340dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        app:endIconMode="password_toggle"
+        android:inputType="textPassword"
+        app:layout_constraintEnd_toEndOf="@+id/log_in_editText_email"
+        app:layout_constraintStart_toStartOf="@+id/log_in_editText_email"
+        app:layout_constraintTop_toBottomOf="@+id/log_in_txt_password">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/log_in_editText_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/roundstyle"
+            android:backgroundTint="@color/white"
+            android:drawableStart="@drawable/ic_baseline_lock_24"
+            android:hint="@string/log_in_password_ph"
+            android:textColor="@color/grey_placeholders" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
         android:id="@+id/log_in_txt_forgot"
@@ -83,15 +106,18 @@
     <CheckBox
         android:id="@+id/log_in_chkBox_remember"
         android:layout_width="wrap_content"
+
         android:layout_height="48dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="32dp"
         android:hint="@string/log_in_remember"
         android:textColor="@color/purple"
         android:textSize="12dp"
-        app:layout_constraintEnd_toEndOf="@+id/log_in_txt_forgot"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="@+id/log_in_txt_forgot"
-        app:layout_constraintTop_toBottomOf="@+id/log_in_txt_forgot" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/log_in_txt_forgot"
+        app:layout_constraintVertical_bias="0.0" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/log_in_btn_logIn"
@@ -104,32 +130,10 @@
         android:textStyle="bold"
         app:cornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/log_in_chkBox_remember"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintStart_toStartOf="@+id/log_in_chkBox_remember"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/log_in_chkBox_remember"
-        app:layout_constraintVertical_bias="0.562" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayout"
-        android:layout_width="340dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="24dp"
-        app:endIconMode="password_toggle"
-        android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="@+id/log_in_editText_email"
-        app:layout_constraintStart_toStartOf="@+id/log_in_editText_email"
-        app:layout_constraintTop_toBottomOf="@+id/log_in_txt_password">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/log_in_editText_password"
-            android:background="@drawable/roundstyle"
-            android:backgroundTint="@color/white"
-            android:layout_width="340dp"
-            android:layout_height="60dp"
-            android:textColor="@color/grey_placeholders"
-            android:drawableStart="@drawable/ic_baseline_lock_24"
-            android:hint="@string/log_in_password_ph" />
-    </com.google.android.material.textfield.TextInputLayout>
+        app:layout_constraintVertical_bias="0.212" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
