--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -40,6 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
         android:text="Nombre del usuario"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/profile_imageView"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="@+id/profile_imageView"
