--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -10,17 +10,18 @@
 
     <TextView
         android:id="@+id/sign_up_txt_title"
-        android:layout_width="166dp"
-        android:layout_height="33dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="198dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="36dp"
         android:text="@string/sign_up_title"
+        android:textAlignment="center"
         android:textColor="@color/purple"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
     <EditText
         android:id="@+id/sign_up_editText_username"
@@ -63,7 +64,7 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout"
         android:layout_width="340dp"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         app:endIconMode="password_toggle"
         android:inputType="textPassword"
@@ -76,7 +77,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/sign_up_editText_password"
             android:layout_width="340dp"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/roundstyle"
             android:backgroundTint="@color/white"
             android:drawableStart="@drawable/ic_baseline_lock_24"
@@ -87,7 +88,7 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout1"
         android:layout_width="340dp"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:inputType="textPassword"
         app:endIconMode="password_toggle"
@@ -100,7 +101,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/sign_up_editText_passwordConfirmation"
             android:layout_width="340dp"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/roundstyle"
             android:backgroundTint="@color/white"
             android:drawableStart="@drawable/ic_baseline_lock_24"
@@ -119,9 +120,10 @@
         app:cornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/sign_up_RadioGroup"
+        app:layout_constraintHorizontal_bias="0.133"
         app:layout_constraintStart_toStartOf="@+id/sign_up_RadioGroup"
         app:layout_constraintTop_toBottomOf="@+id/sign_up_RadioGroup"
-        app:layout_constraintVertical_bias="0.515" />
+        app:layout_constraintVertical_bias="0.238" />
 
     <EditText
         android:id="@+id/sign_up_editText_date"
@@ -147,9 +149,9 @@
 
     <RadioGroup
         android:id="@+id/sign_up_RadioGroup"
-        android:layout_width="346dp"
-        android:layout_height="84dp"
-        android:layout_marginEnd="3dp"
+        android:layout_width="340dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="@+id/sign_up_editText_date"
         app:layout_constraintStart_toStartOf="@+id/sign_up_editText_date"
         app:layout_constraintTop_toBottomOf="@+id/sign_up_editText_date">
@@ -163,7 +165,7 @@
         <RadioButton
             android:id="@+id/signup_radioButton_professor"
             android:layout_width="match_parent"
-            android:layout_height="49dp"
+            android:layout_height="wrap_content"
             android:text="Profesor" />
     </RadioGroup>
 
