--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -18,36 +18,36 @@
             android:id="@+id/categoria"
             />-->
         <LinearLayout
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:layout_marginVertical="10dp"
-              android:orientation="horizontal">
+            android:layout_width="match_parent"
+            android:layout_height="78dp"
+            android:layout_marginVertical="10dp"
+            android:orientation="horizontal">
 
-              <de.hdodenhof.circleimageview.CircleImageView
-                  android:id="@+id/profile_pic"
-                  android:layout_width="80dp"
-                  android:layout_height="80dp"
-                  android:layout_marginStart="20dp"
-                  android:src="@drawable/happy_emoji"/>
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/profile_pic"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginStart="20dp"
+                android:src="@drawable/happy_emoji" />
 
-              <LinearLayout
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:layout_marginStart="20dp"
-                  android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:orientation="vertical">
 
-                  <TextView
-                      android:id="@+id/personName"
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:text="Christopher"
-                      android:textColor="@color/black"
-                      android:textSize="26sp"
-                      android:textStyle="bold"/>
-              </LinearLayout>
-          </LinearLayout>
+                <TextView
+                    android:id="@+id/personName"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="Christopher"
+                    android:textColor="@color/black"
+                    android:textSize="26sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+        </LinearLayout>
 
-  </RelativeLayout>
+    </RelativeLayout>
 
 
 </androidx.cardview.widget.CardView>
