--- a/app/src/main/res/layout/activity_subtema.xml
+++ b/app/src/main/res/layout/activity_subtema.xml
@@ -28,7 +28,7 @@
         android:id="@+id/imageSTheme"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@drawable/happy_emoji"
+        android:src="@drawable/temas_1"
         app:layout_constraintBottom_toBottomOf="@+id/progressSTheme"
         app:layout_constraintEnd_toEndOf="@+id/progressSTheme"
         app:layout_constraintStart_toStartOf="@+id/progressSTheme"
